--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  background-color: var(--pal-background-default);
+  color: var(--pal-text-primary);
 }
 
 .header {
@@ -28,7 +30,7 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid var(--pal-grey-300);
+  border-top: 1px solid var(--pal-divider);
   display: flex;
   justify-content: center;
   align-items: center;
