--- a/components/Layout/Navbar.module.css
+++ b/components/Layout/Navbar.module.css
@@ -39,8 +39,26 @@
   width: 30px;
   margin: auto 0;
   margin-right: 0.5rem;
+  filter: var(--pal-make-text-inverted, none);
 }
 
 .navItem:hover .discord {
   filter: var(--pal-make-primary-main);
+}
+
+.iconContainer {
+  height: 45px;
+  width: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0.5rem;
+  border-radius: 50%;
+}
+
+.themeIcon {}
+
+.iconContainer:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
 }
