--- a/components/Layout/Navbar.module.css
+++ b/components/Layout/Navbar.module.css
@@ -4,6 +4,10 @@
   color: var(--pal-text-inverted);
 }
 
+.title {
+  white-space: nowrap;
+}
+
 .nav {
   display: flex;
   flex-direction: row;
@@ -22,6 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  white-space: nowrap;
 }
 
 .navItem:hover {
@@ -52,7 +57,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 0.5rem;
+  margin: 0 0.5rem;
   border-radius: 50%;
 }
 
@@ -61,4 +66,18 @@
 .iconContainer:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+@media only screen and (max-width: 850px) {
+  .discordItem span {
+    display: none;
+  }
+
+  .discord {
+    margin-right: 0;
+  }
+
+  .header {
+    padding: 0 2rem;
+  }
 }
