--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -1,31 +1,38 @@
 .container {
-  min-height: 100vh;
-  min-width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+  min-height: 100vh;
+  width: fit-content;
   background-color: var(--pal-background-default);
   color: var(--pal-text-primary);
+  overflow-y: hidden;
 }
 
 .header {
-  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
   height: 70px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
+.content {
+  margin-top: 70px;
+}
+
 .main {
-  flex: 1;
+  min-height: calc(100vh - 170px);
+  width: fit-content;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
 
 .footer {
