--- a/components/Layout/Navbar.module.css
+++ b/components/Layout/Navbar.module.css
@@ -2,6 +2,7 @@
   padding: 0 10%;
   background: var(--pal-primary-main);
   color: var(--pal-text-inverted);
+  border-bottom: 1px solid var(--pal-divider);
 }
 
 .title {
