--- a/styles/Event.module.css
+++ b/styles/Event.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 100%;
+  width: auto;
+  height: 100%;
 }
 
 .title {
@@ -19,8 +20,7 @@
 }
 
 .statsContainer {
-  min-width: 600px;
-  max-width: 1100px;
+  max-width: 1400px;
   width: 80%;
   margin-bottom: 50px;
   display: flex;
