--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -21,6 +21,18 @@
   align-items: center;
 }
 
+.progressbar {
+  height: 10px;
+  width: 100vw;
+  position: fixed;
+  top: 70px;
+  z-index: 10001;
+}
+
+.progressbar div[role='bar'] {
+  background-color: var(--pal-error-main) !important;
+}
+
 .content {
   margin-top: 70px;
 }
