--- a/components/Table/styles/Table.module.css
+++ b/components/Table/styles/Table.module.css
@@ -7,6 +7,7 @@
   box-shadow: var(--shadow-medium);
   background-color: var(--pal-background-default);
   border-radius: 25px;
+  margin-top: 1rem;
 }
 
 .tableSettings {
