--- a/components/Table/styles/TableItem.module.css
+++ b/components/Table/styles/TableItem.module.css
@@ -45,10 +45,31 @@
 .points {
   grid-area: points;
   box-shadow: -13px 0px 10px -4px var(--pal-grey-100);
+  position: relative;
+  justify-content: center;
+  padding-right: 5px;
 }
 
 .darker .points {
   box-shadow: -13px 0px 10px -4px var(--pal-grey-300);
+}
+
+.hoverPerc {
+  display: none;
+}
+
+.points:hover .hoverPerc {
+  display: block;
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(100% - 10px);
+  width: calc(100% - 20px);
+  border-radius: 5px;
+  background-color: var(--pal-warning-dark);
 }
 
 .details {
